# crossoff

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml
demo/: demo.tape  seed.json
src/: app.rs  config.rs  main.rs  model.rs  store.rs  theme.rs
src/ui/: detail.rs  dialogs.rs  mod.rs  projects.rs  tasks.rs
