[package]
name = "crossoff"
version = "0.1.5"
edition = "2021"
description = "A fast, keyboard-driven terminal task manager"
license = "MIT"
repository = "https://github.com/marschall-sh/crossoff"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
